--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.0.7" />
+    <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
   </ItemGroup>
