--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -33,7 +33,7 @@
   "EmailConfiguration": {
     "From": "",
     "SmtpServer": "",
-    "Port": ,
+    "Port": "",
     "Username": "",
     "Password": ""
   },
