--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "",
+    "sqlConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-DB;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "HangfireConnection": ""
   },
   "AppSettings": {
