--- a/API/API.csproj
+++ b/API/API.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\CoreServices\CoreServices.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\IntegrationWith365\IntegrationWith365.csproj" />
     <ProjectReference Include="..\Live\Live.csproj" />
     <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
     <ProjectReference Include="..\TenantConfiguration\TenantConfiguration.csproj" />
