--- a/IntegrationWith365/IntegrationWith365.csproj
+++ b/IntegrationWith365/IntegrationWith365.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreServices\CoreServices.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
