--- a/Dashboard/Dashboard.csproj
+++ b/Dashboard/Dashboard.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Folder Include="wwwroot\Uploud\Account\" />
     <Folder Include="wwwroot\Uploud\Country\" />
+    <Folder Include="wwwroot\Uploud\Player\" />
+    <Folder Include="wwwroot\Uploud\PlayerPosition\" />
     <Folder Include="wwwroot\Uploud\Sponsor\" />
     <Folder Include="wwwroot\Uploud\NewsAttachment\" />
     <Folder Include="wwwroot\Uploud\News\" />
