--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -31,10 +31,10 @@
     "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-c8kna%40insurance-93547.iam.gserviceaccount.com"
   },
   "EmailConfiguration": {
-    "From": "",
-    "SmtpServer": "",
-    "Port": "",
-    "Username": "",
-    "Password": ""
-  },
+    "From": "mail@mail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "mail@mail.com",
+    "Password": "mdskmdskmdskmdsk"
+  }
 }
