--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -9,7 +9,7 @@
   },
   "ConnectionStrings": {
     "sqlConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-DB;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "HangfireConnection": ""
+    "HangfireConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-Hangfire;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
