--- a/API/API.csproj
+++ b/API/API.csproj
@@ -36,6 +36,7 @@
     <ProjectReference Include="..\CoreServices\CoreServices.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\FantasyLogic\FantasyLogic.csproj" />
     <ProjectReference Include="..\IntegrationWith365\IntegrationWith365.csproj" />
     <ProjectReference Include="..\Live\Live.csproj" />
     <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
