--- a/API/API.csproj
+++ b/API/API.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\PlayerScoreArea\Models\" />
     <Folder Include="Areas\PrivateLeagueArea\Models\" />
   </ItemGroup>
 
