--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-DB;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "sqlConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasydb;User Id=db_a905e9_fantasydb_admin;Password=n9$KKb9C65W5hE",
     "HangfireConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-Hangfire;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
