--- a/Dashboard/appsettings.Development.json
+++ b/Dashboard/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
   "ConnectionStrings": {
     "sqlConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasydb;User Id=db_a905e9_fantasydb_admin;Password=n9$KKb9C65W5hE",
-    "HangfireConnection": ""
+    "HangfireConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasyhangfire;User Id=db_a905e9_fantasyhangfire_admin;Password=n9$KKb9C65W5hE"
   },
   "AppSettings": {
     "appKey": "a2b63710-5b7d-4b58-8fc8-4a12724dfecc",
