--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -9,7 +9,7 @@
   },
   "ConnectionStrings": {
     "sqlConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasydb;User Id=db_a905e9_fantasydb_admin;Password=n9$KKb9C65W5hE",
-    "HangfireConnection": "Server=tcp:egyptvantazia-server.database.windows.net,1433;Initial Catalog=EgyptVantazia-Hangfire;Persist Security Info=False;User ID=egyptvantazia-admin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "HangfireConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasyhangfire;User Id=db_a905e9_fantasyhangfire_admin;Password=n9$KKb9C65W5hE"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
