--- a/API/nlog.development.config
+++ b/API/nlog.development.config
@@ -9,7 +9,7 @@
 	<targets>
 		<target xsi:type="Database"
       name="dbTarget"
-      connectionString=""
+      connectionString="Server=tcp:egyptfantasy.database.windows.net,1433;Initial Catalog=EgyptFantazyDB;Persist Security Info=False;User ID=egyptfantasyadmin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       commandText="INSERT INTO Logs(CreatedAt,Details,Level,StackTrace,Logger) VALUES (@datetime,@details,@level,@trace,@logger)">
 			<parameter name="@datetime" layout="${date}" />
 			<parameter name="@details" layout="${message}" />
