--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -8,8 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=tcp:egyptfantasy.database.windows.net,1433;Initial Catalog=EgyptFantazyDB;Persist Security Info=False;User ID=egyptfantasyadmin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    //"sqlConnection": "Data Source=SQL6020.site4now.net;Initial Catalog=db_a905e9_fantasydb;User Id=db_a905e9_fantasydb_admin;Password=n9$KKb9C65W5hE",
+    "sqlConnection": "Server=tcp:fantasyserver.database.windows.net,1433;Initial Catalog=EgyptFantazyDB;Persist Security Info=False;User ID=fantasy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "HangfireConnection": "Data Source=sql6020.site4now.net;Initial Catalog=db_a905e9_fantasyhangfirev5;User Id=db_a905e9_fantasyhangfirev5_admin;Password=n9$KKb9C65W5hE"
   },
   "AppSettings": {
