--- a/FantasyLogic/FantasyLogic.csproj
+++ b/FantasyLogic/FantasyLogic.csproj
@@ -6,9 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.2" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.35">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="Hangfire.Core" Version="1.8.2" />
-    <PackageReference Include="Hangfire.SqlServer" Version="1.8.2" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.35">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
