--- a/FantasyLogicMicroservices/appsettings.json
+++ b/FantasyLogicMicroservices/appsettings.json
@@ -4,7 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting.Liftime": "Information",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.EntityFrameworkCore": "Information",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
