--- a/Dashboard/appsettings.Development.json
+++ b/Dashboard/appsettings.Development.json
@@ -8,8 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=tcp:fantasyserver.database.windows.net,1433;Initial Catalog=EgyptFantazyDB;Persist Security Info=False;User ID=fantasy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    //"sqlConnection": "Server=(localdb)\\MSSQLLocalDB; Database =EgyptFantazyDB; Integrated Security=True;"
+    "sqlConnection": "Server=tcp:fantazydevserver.database.windows.net,1433;Initial Catalog=Fantazy-DB-Dev;Persist Security Info=False;User ID=fantazydevadmin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
     "appKey": "a2b63710-5b7d-4b58-8fc8-4a12724dfecc",
