--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -9,8 +9,8 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=tcp:fantasyserver.database.windows.net,1433;Initial Catalog=EgyptFantazyDB;Persist Security Info=False;User ID=fantasy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "HangfireConnection": "Server=tcp:fantasyserver.database.windows.net,1433;Initial Catalog=Fantazy-Hangfire-DB;Persist Security Info=False;User ID=fantasy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "sqlConnection": "Server=tcp:fantazydevserver.database.windows.net,1433;Initial Catalog=Fantazy-DB-Dev;Persist Security Info=False;User ID=fantazydevadmin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "HangfireConnection": "Server=tcp:fantazydevserver.database.windows.net,1433;Initial Catalog=Hangfire-Dev;Persist Security Info=False;User ID=fantazydevadmin;Password=QWER1234@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"HangfireConnection": "Data Source=.;Initial Catalog=Hangfire;Integrated Security=True"
   },
   "AppSettings": {
