--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=tcp:fantazy-server.database.windows.net,1433;Initial Catalog=Fantazy-DB-Live;Persist Security Info=False;User ID=fantazy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "sqlConnection": "Server=207.180.251.195;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
   },
   "AppSettings": {
     "refreshTokenTTL": 60,
