--- a/FantasyLogicMicroservices/nlog.development.config
+++ b/FantasyLogicMicroservices/nlog.development.config
@@ -9,7 +9,7 @@
 	<targets>
 		<target xsi:type="Database"
       name="dbTarget"
-      connectionString="Server=tcp:fantazy-server.database.windows.net,1433;Initial Catalog=Fantazy-DB-Live;Persist Security Info=False;User ID=fantazy-admin;Password=n9$KKb9C65W5hE;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      connectionString="Server=207.180.251.195;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
       commandText="INSERT INTO Logs(CreatedAt,Details,Level,StackTrace,Logger) VALUES (@datetime,@details,@level,@trace,@logger)">
 			<parameter name="@datetime" layout="${date}" />
 			<parameter name="@details" layout="${message}" />
