--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -4,14 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting.Liftime": "Information",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "Hangfire": "Information"
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
   "ConnectionStrings": {
     "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
     "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
-    //"HangfireConnection": "Data Source=.;Initial Catalog=Hangfire;Integrated Security=True"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
