--- a/FantasyLogicMicroservices/nlog.development.config
+++ b/FantasyLogicMicroservices/nlog.development.config
@@ -9,7 +9,7 @@
 	<targets>
 		<target xsi:type="Database"
       name="dbTarget"
-      connectionString="erver=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
+      connectionString="Server=207.180.251.195;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
       commandText="INSERT INTO Logs(CreatedAt,Details,Level,StackTrace,Logger) VALUES (@datetime,@details,@level,@trace,@logger)">
 			<parameter name="@datetime" layout="${date}" />
 			<parameter name="@details" layout="${message}" />
