--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -10,8 +10,8 @@
   },
   "ConnectionStrings": {
     "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
-    "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
-    //"HangfireConnection": "Data Source=.;Initial Catalog=Hangfire;Integrated Security=True"
+    //"HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
+    "HangfireConnection": "Data Source=SALEMMOHAMED-20;Initial Catalog=Fantazy-Hangfire-Live;Integrated Security=True"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
