--- a/Dashboard/Dashboard.csproj
+++ b/Dashboard/Dashboard.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
-		<AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+		<AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>
 		<AllowUntrustedCertificate>True</AllowUntrustedCertificate>
 	</PropertyGroup>
 
