--- a/API/API.csproj
+++ b/API/API.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
-		<AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+		<AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>
 		<AllowUntrustedCertificate>True</AllowUntrustedCertificate>
 	</PropertyGroup>
 
