--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -9,10 +9,10 @@
     }
   },
   "ConnectionStrings": {
-    //"sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
-    "sqlConnection": "Data Source=SALEMMOHAMED-20;Initial Catalog=Fantazy-DB-Live;Integrated Security=True;TrustServerCertificate=True;",
-    //"HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
-    "HangfireConnection": "Data Source=SALEMMOHAMED-20;Initial Catalog=Fantazy-Hangfire-Live;Integrated Security=True;TrustServerCertificate=True;"
+    "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
+    //"sqlConnection": "Data Source=SALEMMOHAMED-20;Initial Catalog=Fantazy-DB-Live;Integrated Security=True;TrustServerCertificate=True;",
+    "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
+    //"HangfireConnection": "Data Source=SALEMMOHAMED-20;Initial Catalog=Fantazy-Hangfire-Live;Integrated Security=True;TrustServerCertificate=True;"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
