--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -9,8 +9,8 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
-    "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-New;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
+    "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;",
+    "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-New;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
