--- a/FantasyLogicMicroservices/appsettings.Development.json
+++ b/FantasyLogicMicroservices/appsettings.Development.json
@@ -9,9 +9,9 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;",
-    "HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;",
-    //"HangfireConnection": "Server=41.128.143.147;Database=Fantazy-Hangfire-Recurring;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;"
+    "sqlConnection": "Server=localhost;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;",
+    //"HangfireConnection": "Server=localhost;Database=Fantazy-Hangfire;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;"
+    "HangfireConnection": "Server=localhost;Database=Fantazy-Hangfire-Recurring;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;Max Pool Size=5000;"
   },
   "AppSettings": {
     "refreshTokenTTL": 14,
