--- a/API/appsettings.development.json
+++ b/API/appsettings.development.json
@@ -8,7 +8,8 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
+    //"sqlConnection": "Server=41.128.143.147;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;",
+    "sqlConnection": "Server=localhost;Database=Fantazy-DB-Live;User Id=sa;Password=QWERTY@123#;TrustServerCertificate=True;"
   },
   "AppSettings": {
     "refreshTokenTTL": 60,
